@@ -4,7 +4,7 @@ items:
   -
     # BasicNode fields
     id: itemka32  
-    __type__: sortendetail_vpe # [ sortendetail_vpe | default_vpe]
+    __type__: sortendetail_default_vpe # [ sortendetail_xbestellung_vpe | sortendetail_default_vpe | default_vpe]
     parent_id: 33333_karottensorte
     order : 3
     shops:
